# Engine

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  audio.cpp  buildweb.bat  config.h.in  main.cpp  palette.dmp  sprite.dmp  testpalette.dmp  testsprite.dmp  vulkan.cpp  vulkan.h
demos/: cubespin.cpp  snesGraphicsEditor.cpp  spectrum.cpp
shaders/: compile.bat  font.frag  font.vert  frag.spv  frag3d.spv  fragFont.spv  shader.frag  shader.vert  shader3d.frag  shader3d.vert  vert.spv  vert3d.spv  vertFont.spv
src/: audio.cpp  audio.h  goodstr.h  graphics.cpp  graphics.h  main.cpp  snesGraphicsEditor.cpp  spectrum.cpp  vulkan.cpp  vulkan.h  web.cpp  web.h
tools/: objToMesh.cpp  objToMesh.py
webbuild/: CUBESPIN.js  SNES.js  SPECTRUM.data  SPECTRUM.js  app_wasm.js  app_wasm.js.mem  app_wasm.wasm  index.html  packassets.py  wasm_loader.js
